# legacylens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
dashboard/: api_client.py  app.py  bootstrap.py  components.py  helpers.py  theme.py
dashboard/views/: project_detail.py  projects.py
docs/: ARCHITECTURE.md  BUILDLOG.md  DEPLOYMENT.md  PORTFOLIO.md
scripts/: evidence_smoke.py
src/legacylens/: __init__.py
src/legacylens/agents/: citation.py  digest.py  graph.py  llm.py  prompts.py
src/legacylens/analyzers/: architecture.py  base.py  builtin.py  config_analysis.py  db_analysis.py  dep_vulns.py  manifest_deps.py  module_graph.py  registry.py  tech_debt.py  tech_detection.py  tech_eol.py  util.py
src/legacylens/api/: app.py
src/legacylens/artifacts/: mermaid.py  report.py
src/legacylens/core/: config.py  exceptions.py  logging.py
src/legacylens/db/: models.py  session.py
src/legacylens/domain/: models.py
src/legacylens/evidence/: cache.py  eol.py  http.py  osv.py
src/legacylens/graph/: algorithms.py  store.py
src/legacylens/ingestion/: extractor.py  ingestor.py  inventory.py  languages.py  safety.py
src/legacylens/pipeline/: runner.py
tests/: test_artifacts.py  test_dashboard.py  test_evidence.py  test_graph.py  test_ingestion.py  test_intel_analyzers.py  test_manifests.py  test_models.py  test_module_graph.py  test_quality_analyzers.py  test_registry.py  test_runner.py  test_scoring.py  test_service_api.py  test_synthesis.py
(+13 files in other folders)
