[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "legacylens"
version = "0.1.0"
description = "AI Software Migration Platform - evidence-grounded legacy system analysis and modernization planning"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Rahul" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "httpx>=0.27",
    "langgraph>=0.2",
    "python-docx>=1.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "celery>=5.4",
    "redis>=5",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
graph = [
    "neo4j>=5.19",
]
dashboard = [
    "streamlit>=1.37",
    "plotly>=5.20",
    "pandas>=2.2",
]
postgres = [
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
